# Haskell-Example

./: .gitignore  ChangeLog.md  Dockerfile  README.md  haskell-example.cabal
exec/: Main.hs
src/Example/: Sort.hs
test/: Main.hs
